<resources>
    <string name="app_name">Warehouse</string>

    <string name="loginActivity_personnelId">Mitarbeiternummer</string>
    <string name="loginActivity_password">Passwort</string>
    <string name="loginActivity_button_login">Login</string>

    <string name="admin_text_headline">Admin</string>
    <string name="admin_text_change">Neuen Artikel anlegen</string>
    <string name="admin_hint_code">Artikelcode eingeben</string>
    <string name="admin_hint_name">Artikelnamen eingeben</string>
    <string name="admin_hint_location">Lagerort eingeben</string>
    <string name="admin_button_save">Artikel speichern</string>

    <string name="commissioningOverview_table_head_kommissionierungen">Kommissionierungen</string>
    <string name="commissioningOverview_table_head_kommissions_nr">Kommissions Nr.</string>
    <string name="commissioningOverview_table_head_artikelAnzahl">Artikel Anzahl</string>
    <string name="commissioningOverview_table_head_annehmen">Annehmen</string>
    <string name="commissioningOverview_head">Meine Kommissionen</string>
    <string name="commissioningOverview_button_start">Starten</string>
    <string name="commissioningOverview_button_accept">Annehmen</string>

    <string name="commissionArtikel_table_head_input">Blub</string>
    <string name="commissionArtikel_table_head_Quantity">Artikelmenge</string>
    <string name="commissionArtikel_table_head_itemCode">Artikel Code:</string>
    <string name="commissionArtikel_table_head_itemName">Artikel Name:</string>
    <string name="commissionArtikel_table_head_stockLocation">Lagerort:</string>
    <string name="commissionArtikel_table_head_targetQuantity">Soll Menge:</string>
    <string name="commissionArtikel_table_head_commissionQuantity">Kommissionsmenge:</string>
    <string name="commissionArtikel_table_head_commissionedQuantity">Kommissionierte Menge</string>
    <string name="commissionArtikel_table_head_underage">Fehlmenge melden</string>
    <string name="commissionArtikel_table_head_forward">weiter</string>
    <string name="commissionArtikel_headline1">Kommission mit der Nummer:</string>
    <string name="commissionArtikel_headline2">ausgewählt</string>
    <string name="commissionArtikel_positionOverall1">Artikel</string>
    <string name="commissionArtikel_positionOverall2">von</string>

    <string name="stockOut_setItem">Artikel Code:</string>
    <string name="stockOut_table_head_underage">Fehlmenge melden</string>
    <string name="stockOut_table_head_optional">Vorhandene Menge (optional)</string>
    <string name="stockOut_button_report">Melden</string>

    <string name="stock_table_head_headline">Bestandskontrolle</string>
    <string name="stock_table_head_item">Artikel</string>
    <string name="stock_table_head_amount">Menge</string>
    <string name="stock_table_head_alter">Ändern</string>

    <string name="stockAmendment_button_alter">Menge ändern</string>
    <string name="stockAmendment_text_headline">Menge ändern für Artikel</string>
    <string name="stockAmendment_text_storageLocation">Lagerort</string>
    <string name="stockAmendment_text_quantity">Menge</string>
    <string name="stockAmendment_text_addedQuantity">Menge hinzufügen/abziehen</string>

    <string name="scanner_fail">Es liegt ein Fehler mit dem Scanner vor. Bitte schließen Sie die App und starten sie erneut.</string>

    <string name="drawer_open">Menü öffnen</string>
    <string name="drawer_close">Menü schließen</string>
    <string name="drawer_title">Zurück</string>
    <string name="drawer_commission">Meine Kommissionen</string>
    <string name="drawer_commission_overview">Offene Kommissionen</string>
    <string name="drawer_stock">Lagerbestände</string>
    <string name="drawer_logout">Logout</string>
    <string name="action_settings">Einstellungen</string>

    <string name="toast_logout">Logout</string>
    <string name="toast_exit">Bitte drücken Sie erneut die Zurück Taste um die App zu beenden</string>
    <string name="toast_commissionExitNotAllowed">Kommission kann nicht abgebrochen werden</string>
    <string name="toast_wrongInput">Ungültige Eingabe</string>
    <string name="toast_canceled">Abgebrochen</string>

    <string name="toast_loginActivity_loginSuccess">Eingeloggt als</string>
    <string name="toast_loginActivity_loginFail">Login fehlgeschlagen</string>
    <string name="toast_commissioningOverview_accept1">Kommission mit id: </string>
    <string name="toast_commissioningOverview_accept2">angenommen</string>
    <string name="toast_commissionArtikel_wrongItem">Artikel stimmen nicht überein</string>
    <string name="toast_commissionArtikel_end">Kommission beendet!</string>
    <string name="toast_commissionArtikel_wrongInput">Eingegebene Menge ist nicht gültig</string>
    <string name="toast_commissionArtikel_wrongQuantity">Zu kommissionierende Mengen stimmen nicht überein</string>
    <string name="toast_stockOut_success">Fehlmenge gemeldet</string>
    <string name="toast_stockAmendment_success">Menge erfolgreich geändert</string>

    <string name="dialog_wait">Bitte warten</string>
    <string name="dialog_load">Daten werden geladen</string>
    <string name="dialog_article">Artikel werden geladen</string>

    <string name="dialog_box_question">Menge wirklich ändern?</string>
    <string name="dialog_box_ok">Bestätigen</string>
    <string name="dialog_box_cancel">Abbrechen</string>
</resources>
