<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg2">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="warehouse.fh_muenster.de.warehouse.Stock">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TableLayout
                android:id="@+id/stock_table_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:width="100dp"
                        android:text="@string/stock_table_head_headline"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="0"
                        android:layout_weight="0"
                        android:width="100dp"
                        android:text="@string/stock_table_head_item" />

                    <TextView
                        android:layout_column="1"
                        android:layout_weight="0"
                        android:width="100dp"
                        android:text="@string/stock_table_head_amount" />

                    <TextView
                        android:layout_column="1"
                        android:layout_weight="0"
                        android:width="100dp"
                        android:text="@string/stock_table_head_alter" />
                </TableRow>
            </TableLayout>
        </ScrollView>

    </RelativeLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffeeeeee" />

</android.support.v4.widget.DrawerLayout>